--- a/Frontend/views/wh-sale-return.html
+++ b/Frontend/views/wh-sale-return.html
@@ -654,7 +654,7 @@
                                     <th>Action</th>
                                     <th>Barcode</th>
                                     <th>Item Name</th>
-                                    <th>Sale Price</th>
+                                    <th>Retail Price</th>
                                     <th>Cost Price</th>
                                     <th>Stock</th>
                                     <th>Category</th>
