Update: Added Opening Balance column to customer list and fixed ledger report logic

--- a/Frontend/views/wh-customer.html
+++ b/Frontend/views/wh-customer.html
@@ -108,6 +108,7 @@
                                 <th class="text-center">Category</th>
                                 <th class="text-center">City</th>
                                 <th class="text-center">Mobile</th>
+                                <th class="text-center">Opening</th>
                                 <th class="text-center">NTN</th>
                                 <th class="text-center">WHT %</th>
                                 <th class="text-center">Adv Tax %</th>
