--- a/Frontend/views/wh-customer.html
+++ b/Frontend/views/wh-customer.html
@@ -109,6 +109,7 @@
                                 <th class="text-center">City</th>
                                 <th class="text-center">Mobile</th>
                                 <th class="text-center">Opening</th>
+                                <th class="text-center">Balance</th>
                                 <th class="text-center">NTN</th>
                                 <th class="text-center">WHT %</th>
                                 <th class="text-center">Adv Tax %</th>
