UI Update: Hidden Import/Export buttons on WH Customer screen

--- a/Frontend/views/wh-customer.html
+++ b/Frontend/views/wh-customer.html
@@ -86,10 +86,10 @@
                             <button class="btn btn-info btn-sm" onclick="printTable()">
                                 <i class="fas fa-print me-1"></i> Print
                             </button>
-                            <button class="btn btn-success btn-sm" onclick="exportToExcel()">
+                            <button class="btn btn-success btn-sm d-none" onclick="exportToExcel()">
                                 <i class="fas fa-file-excel me-1"></i> Export Excel
                             </button>
-                            <button class="btn btn-warning btn-sm text-white"
+                            <button class="btn btn-warning btn-sm text-white d-none"
                                 onclick="document.getElementById('excelFileInput').click()">
                                 <i class="fas fa-file-import me-1"></i> Import Excel
                             </button>
